# glasses-ai

./: .env.example  .gitignore  ELEVENLABS_INTEGRATION.md  README.md  detect_live.py  emergency_log_20250913_144940.txt  emergency_log_20250913_152625.txt  emergency_log_20250913_153508.txt  emergency_workflow.py  main_orchestrator.py  messaging_workflow.py  pyproject.toml  snapshot_workflow.py  spotify_music.py  stress_relief_workflow.py  test_capture.py  text_to_speech.py  workflow_with_speech.py
